--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.tsx",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "flow": "flow"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
+    "@babel/preset-flow": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "babel-loader": "^8.2.5",
@@ -32,6 +34,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "flow-bin": "^0.180.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "ts-loader": "^9.3.0",
