--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "strict": true,
         "typeRoots": [
             "node_modules/@types",
-            "src/types"
+            "src/types/typescript"
         ]
     },
     "include": [
